// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
.c0.c0 {
  grid-area: 1 / 2 / 1 / 2;
  display: grid;
  grid-template-columns: 3fr 5fr;
  grid-gap: 0.5rem;
  padding: 0 5rem;
}

.c1.c1 {
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
  grid-area: 1 / 1 / 1 / 1;
}

.c2.c2 {
  text-transform: uppercase;
}

.c3.c3 {
  font-size: x-large;
}

.c4.c4 {
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  grid-area: 2 / 1 / 2 / 1;
}

.c5.c5 {
  grid-area: 1 / 2 / 3 / 3;
}

<section
  data-cy="test-hero"
  style={
    Object {
      "alignContent": "center",
      "display": "grid",
      "gridTemplateColumns": "1fr minmax(auto,  1280px) 1fr",
      "marginBottom": "6rem",
      "minHeight": "35rem",
      "width": "100vw",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <p
        className="c2"
      >
        Instrument
      </p>
      <h1>
        2D-C/P
      </h1>
      <p
        className="c3"
      >
        2D-C/P Hydrometeor Imaging Probe
      </p>
    </div>
    <div
      className="c4"
    >
      <p>
        The 2DC probe records images of hydrometeors...
      </p>
    </div>
    <div
      className="c5"
    >
      <div>
        children
      </div>
    </div>
  </div>
</section>
`;

exports[`Header renders with adjust ratios 1`] = `
.c0.c0 {
  grid-area: 1 / 2 / 1 / 2;
  display: grid;
  grid-template-columns: 5fr 3fr;
  grid-gap: 0.5rem;
  padding: 0 5rem;
}

.c1.c1 {
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
  grid-area: 1 / 1 / 1 / 1;
}

.c2.c2 {
  text-transform: uppercase;
}

.c3.c3 {
  font-size: x-large;
}

.c4.c4 {
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  grid-area: 2 / 1 / 2 / 1;
}

.c5.c5 {
  grid-area: 1 / 2 / 3 / 3;
}

<section
  data-cy="undefined-hero"
  style={
    Object {
      "alignContent": "center",
      "display": "grid",
      "gridTemplateColumns": "1fr minmax(auto,  1280px) 1fr",
      "marginBottom": "6rem",
      "minHeight": "35rem",
      "width": "100vw",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <p
        className="c2"
      >
        Instrument
      </p>
      <h1>
        2D-C/P
      </h1>
      <p
        className="c3"
      >
        2D-C/P Hydrometeor Imaging Probe
      </p>
    </div>
    <div
      className="c4"
    >
      <p>
        The 2DC probe records images of hydrometeors...
      </p>
    </div>
    <div
      className="c5"
    >
      <div>
        children
      </div>
    </div>
  </div>
</section>
`;
